Fri Aug 15 02:25:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The user list toggle button never got re-added after changing
	    how the toolbar was created. Fixed.

Fri Aug 15 02:15:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Changing the account in the drop-down list in the Join Chat
	    dialog now updates the widgets for specifying the
	    protocol-dependent chat information.

Fri Aug 15 00:55:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Added the Join Chat dialog.

Fri Aug 15 00:32:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Connecting to an account, disconnecting, and then connecting to
	    any account no longer crashes.

Thu Aug 14 03:04:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	  - Icons for accounts not signed on in the accounts window are
	    now saturated, and accounts signed on are normal. It's now
	    much easier to distinguish between signed on and signed off
	    accounts without having to click them to see the status of the
	    connect/disconnect buttons.
	  - The connect/disconnect buttons now update the selected item when
	    signed on or off.

Thu Aug 14 02:41:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Added the buttons and menu items for joining and adding chats.
	    No implementation yet.

Thu Aug 14 02:22:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/send-im.png:
	  - Updated the IM icon.

Thu Aug 14 02:10:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/protocols/small/irc.png:
	  - Updated the IRC protocol icon.
