@@ -1,3 +1,9 @@
+Fri Aug 15 02:32:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - The current chat tab no longer gets highlighting, and the
+	    colors don't get "stuck."
+
 Fri Aug 15 02:25:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
